--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>programming3</groupId>
   <artifactId>ChatSys</artifactId>
-  <version>1.0</version>
+  <version>2.0</version>
 
   <name>ChatSys</name>
   <!-- FIXME change it to the project's website -->
@@ -23,6 +23,11 @@
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
       <version>5.7.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20200518</version>
     </dependency>
   </dependencies>
 
