--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>programming3</groupId>
   <artifactId>ChatSys</artifactId>
-  <version>2.0</version>
+  <version>2.1</version>
 
   <name>ChatSys</name>
   <!-- FIXME change it to the project's website -->
@@ -28,6 +28,16 @@
       <groupId>org.json</groupId>
       <artifactId>json</artifactId>
       <version>20200518</version>
+    </dependency>
+    <dependency>
+      <groupId>org.xerial</groupId>
+      <artifactId>sqlite-jdbc</artifactId>
+      <version>3.32.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.18</version>
     </dependency>
   </dependencies>
 
